scrollbar fix

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -52,7 +52,6 @@ button{
       font-size: 200%;
       text-align: center;
   }
-
-/* .Homepage{
-      height: 100vh;
-  } */
+.body{
+  height: 100vh;
+}
